# mri_distortion_toolkit

./: .buildinfo  .gitignore  FreeCADsetup.html  Harmonic_sanity_checks.html  Harmonic_stability_checks.html  Preamble.html  README.md  code_docs.html  dev_notes.html  dev_requirements.txt  developer_notes.html  distortion_correction.html  examples.html  field_calculation.html  fit_spherical_harmonics.html  genindex.html  index.html  load_notes.html  marker_extraction.html  marker_matching.html  marker_position_errors.html  objects.inv  phantom_construction.html  phantom_design.html  phantom_imaging.html  phantom_notes.html  py-modindex.html  readme.md  reporting.html  search.html  searchindex.js  setup.cfg
MRI_DistortionQA/: DistortionCorrector.py  FieldAnalysis.py  FieldCalculation.py  Harmonics.py  K_SpaceCorrector.py  MarkerAnalysis.py  Reports.py  ReportsNATSEDIT.py  __init__.py  calculate_harmonics.py  utilities.py
MR_DistortionQA/: DistortionCorrection.py  FieldAnalysis.py  MarkerAnalysis.py  Reports.py  __init__.py  utilities.py
Paul Notebooks/: Precise mode.ipynb
_sources/: FreeCADsetup.md.txt  dev_notes.md.txt  developer_notes.md.txt  field_calculation.md.txt  fit_spherical_harmonics.md.txt  index.rst.txt  marker_extraction.md.txt  marker_matching.md.txt  marker_position_errors.md.txt  phantom_design.md.txt  phantom_imaging.md.txt  phantom_notes.rst.txt  reporting.md.txt
_static/: MR_QA_report_20_05_2022.html
docs/: .buildinfo  FreeCAD.html  Harmonic_sanity_checks.html  PhantomGeneration.html  Preamble.html  code_docs.html  developer_notes.html  examples.html  field_calculation.html  fit_spherical_harmonics.html  genindex.html  index.html  marker_extraction.html  marker_matching.html  mat-modindex.html  matlab_docs.html  objects.inv  py-modindex.html  python_docs.html  reporting.html  search.html  searchindex.js
docsrc/: FreeCADsetup.md  Harmonic_sanity_checks.md  Harmonic_stability_checks.md  Preamble.md  build_docs_requirements.txt  code_docs.rst  conf.py  dev_notes.md  distortion_correction.md  examples.rst  field_calculation.md  fit_spherical_harmonics.md  index.rst  load_notes.md  marker_extraction.md  marker_matching.md  phantom_construction.md  phantom_design.md  phantom_imaging.md  phantom_notes.rst  reporting.md
examples/: 1_marker_extraction.py  2_marker_matching.py  3_field_calculation.py  4_fit_harmonics.py  4b_fit_harmonics_from_marker_volume.py  5_reporting.py  G_x_harmonics.csv  G_y_harmonics.csv  G_z_harmonics.csv  Matched_Markers.csv  README.md  _0_build_phantoms.py  _0b_complete_phantom.py  _1_marker_extraction.py  _1b_grid_marker_extraction.py  _2_marker_matching.py  _3_field_calculation.py  _3b_field_calculation_from_phase_map.py  _4_fit_harmonics.py  _5_reporting.py  _6_all_together_now.py  _6_distortion_correction.py  _6b_distortion_correction_B0.py  _7_end_to_end.py  __init__.py  end_to_end.py  field_calculation.py  fit_harmonics.py  fit_harmonics_from_marker_volume.py  marker_extraction.py  marker_matching.py  reporting.py
mri_distortion_toolkit/: DistortionCorrection.py  FieldCalculation.py  Harmonics.py  K_SpaceCorrector.py  MarkerAnalysis.py  PhantomDesigner.py  Reports.py  __init__.py  calculate_harmonics.py  utilities.py
tests/: test_FieldCalculation.py  test_MarkerAnalysis.py  test_PhantomDesigner.py  test_distortion_correction.py  (+4 more)
(+247 files in other folders)
