[metadata]
name = MR_DistortionQA
author = Brendan Whelan, Paul Liu, Shanshan Shan
author_email = bwheelz360@gmail.com
license_files = LICENSE.md
version = attr: MR_DistortionQA.__version__
description = Quality assurance tools for MRI geometric distortion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.sydney.edu.au/Image-X/MRI_DistCorrectionPhantom
project_urls =
    Bug Tracker = https://github.sydney.edu.au/Image-X/MRI_DistCorrectionPhantom/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License

[options]
package_dir =
    = .
packages = MR_DistortionQA
python_requires = >=3.8
install_requires =
    "numpy",
    "scipy",
    "scikit-image",
    "matplotlib",
    "pydicom",
    "dicompyler-core",
    "pandas",
    "seaborn",
    "plotly",
    "jinja2"