[metadata]
name = MRI_DistortionQA
author = Brendan Whelan, Paul Liu, Shanshan Shan
author_email = bwheelz360@gmail.com
license_files = LICENSE.md
version = attr: MRI_DistortionQA.__version__
description = Quality assurance tools for MRI geometric distortion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://acrf-image-x-institute.github.io/MRI_DistortionQA/index.html
project_urls =
    Bug Tracker = https://github.com/ACRF-Image-X-Institute/MRI_DistortionQA
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = .
packages = MRI_DistortionQA, MRI_DistortionQA.jinja_templates, MRI_DistortionQA.jinja_templates.themes
include_package_data = True
[options.package_data]
* = *.html, *.md, *.css
hello = *.msg
MRI_DistortionQA.jinja_templates = *.html
MRI_DistortionQA.jinja_templates.themes = *.css, *.md
python_requires = >=3.8
install_requires =
    numpy
    scipy
    scikit-image
    matplotlib
    pydicom
    pandas
    seaborn
    plotly
    jinja2