[metadata]
name = mri_distortion_toolkit
author = Brendan Whelan, Paul Liu, Shanshan Shan
author_email = bwheelz360@gmail.com
license_files = LICENSE.md
version = attr: mri_distortion_toolkit.__version__
description = Quality assurance tools for MRI geometric distortion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://acrf-image-x-institute.github.io/mri_distortion_toolkit/index.html
project_urls =
    Bug Tracker = https://github.com/ACRF-Image-X-Institute/mri_distortion_toolkit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = .
packages = mri_distortion_toolkit, mri_distortion_toolkit.jinja_templates, mri_distortion_toolkit.jinja_templates.themes
include_package_data = True

python_requires = >=3.8
install_requires =
    numpy
    scipy
    scikit-image
    matplotlib
    pydicom
    pandas
    seaborn
    plotly
    jinja2
    finufft
[options.package_data]
* = *.html, *.md, *.css
mri_distortion_toolkit.jinja_templates = *.html
mri_distortion_toolkit.jinja_templates.themes = *.css, *.md
[tool:interrogate]
ignore-init-method = true
ignore-module = true
fail-under = 95
